# ons-census-2031-digital-inclusion-risk

./: .gitignore  CHANGELOG.md  DATA_LICENSE.md  LICENSE  README.md  RECONSTRUCTION_NOTES.md  pyproject.toml  requirements.txt
.github/workflows/: quality.yml
data/raw/: README.md
data/reference/: README.md  reference_scores.csv
docs/: DATA_DICTIONARY.md  EXECUTIVE_BRIEF.md  METHODOLOGY.md  VALIDATION_REPORT.md
notebooks/: 01_reference_analysis.ipynb
outputs/: validation_report.json
outputs/tables/: evidence_led_top12.csv
scripts/: reproduce_reference_outputs.py  run_full_analysis.py
src/ons_risk_index/: __init__.py  analysis.py  reference.py  visualise.py
tests/: test_analysis.py  test_data_quality.py
